Fixing http://drupal.org/node/1929568 Gap appearing between menu and content.

--- a/css/style.css
+++ b/css/style.css
@@ -487,10 +487,6 @@ footer {
   padding: 4px 9px 4px 0;
 }
 
-#preface-wrapper {
-  margin-top: 10px;
-}
-
 #breadcrumbs {
   padding: 10px 0 0 10px;
 }
